src/objects/Harvest_Project__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Harvest Projects</relationshipLabel>
        <relationshipName>Harvest_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_by__c</fullName>
        <label>Bill by</label>
        <picklist>
            <picklistValues>
                <fullName>People</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_by__c</fullName>
        <label>Budget by</label>
        <picklist>
            <picklistValues>
                <fullName>No budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total project hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total project fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours per task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours per person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Harvest_ID__c</fullName>
        <externalId>true</externalId>
        <label>Harvest ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Harvest Projects</relationshipLabel>
        <relationshipName>Harvest_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <externalId>true</externalId>
        <label>Project Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Harvest Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Budget_by__c</columns>
        <columns>Budget__c</columns>
        <columns>Notes__c</columns>
        <columns>Billable__c</columns>
        <columns>Active__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Harvest Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Harvest Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>